<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>finder_bots</name>
  <version>1.0.0</version>
  <description>Finder Bots Swarm Intelligence</description>
  <maintainer email="gdatta@umd.edu">Datta Lohith Gannavarapu</maintainer>
  <maintainer email="nazrin@umd.edu">Nazrin Gurbanova</maintainer>
  <maintainer email="sivaram@umd.edu">Dheeraj Vishnubhotla</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
